--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,15 @@
+beautifulsoup4==4.12.3
+blinker==1.9.0
+certifi==2024.12.14
+charset-normalizer==3.4.1
+click==8.1.8
+fandom-py==0.2.1
 Flask==3.0.3
+idna==3.10
+itsdangerous==2.2.0
+Jinja2==3.1.5
+MarkupSafe==3.0.2
+requests==2.32.3
+soupsieve==2.6
+urllib3==2.3.0
+Werkzeug==3.1.3
