--- a/package.json
+++ b/package.json
@@ -3,26 +3,35 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "flask-dev": "pip3 install -r requirements.txt && python3 -m flask --app api/index --debug run -p 5328",
+    "flask-dev": "python -m flask --app api/index --debug run -p 5328",
     "next-dev": "next dev",
-    "dev": "concurrently \"yarn run next-dev\" \"yarn run flask-dev\"",
+    "dev": "yarn run next-dev & yarn run flask-dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-accordion": "^1.2.2",
+    "@radix-ui/react-dialog": "^1.1.5",
+    "@tailwindcss/postcss": "^4.0.0",
     "@types/node": "20.1.4",
-    "@types/react": "18.2.6",
+    "@types/react": "^19.0.7",
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "concurrently": "^8.0.1",
     "eslint": "8.40.0",
-    "eslint-config-next": "13.4.2",
-    "next": "13.4.3",
-    "postcss": "8.4.23",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "tailwindcss": "3.3.2",
-    "typescript": "5.0.4"
+    "eslint-config-next": "^15.1.6",
+    "lucide-react": "^0.473.0",
+    "next": "^15.1.6",
+    "next-themes": "^0.4.4",
+    "postcss": "^8.5.1",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "tailwind-merge": "^2.6.0",
+    "tailwindcss": "^4.0.0",
+    "tailwindcss-animate": "^1.0.7",
+    "typescript": "^5.7.3"
   }
 }
