feat: skeleton e cover

--- a/components.json
+++ b/components.json
@@ -11,11 +11,11 @@
     "prefix": ""
   },
   "aliases": {
-    "components": "app/components",
-    "utils": "app/lib/utils",
-    "ui": "app/components/ui",
-    "lib": "app/lib",
-    "hooks": "app/hooks"
+    "components": "@/app/components",
+    "utils": "@/app/lib/utils",
+    "ui": "@/app/components/ui",
+    "lib": "@/app/lib",
+    "hooks": "@/app/hooks"
   },
   "iconLibrary": "lucide"
 }
