--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "autoprefixer": "10.4.14",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "1.0.0",
     "concurrently": "^8.0.1",
     "eslint": "8.40.0",
     "eslint-config-next": "^15.1.6",
