--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,29 @@
+apispec==6.8.1
+attrs==25.1.0
 beautifulsoup4==4.12.3
 blinker==1.9.0
 certifi==2024.12.14
 charset-normalizer==3.4.1
 click==8.1.8
 fandom-py==0.2.1
+flasgger==0.9.7.1
 Flask==3.0.3
+flask-marshmallow==1.3.0
 idna==3.10
 itsdangerous==2.2.0
 Jinja2==3.1.5
+jsonschema==4.23.0
+jsonschema-specifications==2024.10.1
 MarkupSafe==3.0.2
+marshmallow==3.26.0
+mistune==3.1.1
+packaging==24.2
+PyYAML==6.0.2
+referencing==0.36.2
 requests==2.32.3
+rpds-py==0.22.3
+six==1.17.0
 soupsieve==2.6
+typing_extensions==4.12.2
 urllib3==2.3.0
 Werkzeug==3.1.3
