--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
     "flask-dev": "python -m flask --app api/index --debug run -p 5328",
     "next-dev": "next dev",
     "dev": "yarn run next-dev & yarn run flask-dev",
+    "prebuild": "kubb generate",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "pregen": "wget http://localhost:5328/swagger.json -O api/api.json",
+    "pregen": "wget http://localhost:5328/swagger.json -O api/swagger.json",
     "gen": "kubb generate"
   },
   "dependencies": {
