--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@kubb/plugin-client": "^3.5.6",
     "@kubb/plugin-oas": "^3.5.6",
     "@kubb/plugin-react-query": "^3.5.6",
-    "@kubb/plugin-ts": "^3.5.6"
+    "@kubb/plugin-ts": "^3.5.6",
+    "dotenv": "^16.4.7"
   }
 }
