--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ charset-normalizer==3.4.1
 click==8.1.8
 fandom-py==0.2.1
 Flask==3.0.3
+Flask-Cors==5.0.0
 flask-smorest==0.45.0
 idna==3.10
 importlib_resources==6.5.2
@@ -17,6 +18,7 @@ jsonschema==4.23.0
 jsonschema-specifications==2024.10.1
 MarkupSafe==3.0.2
 marshmallow==3.26.0
+marshmallow-enum==1.5.1
 mistune==3.1.1
 packaging==24.2
 pytz==2024.2
