--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.0",
+    "color": "^4.2.3",
     "concurrently": "^8.0.1",
     "eslint": "8.40.0",
     "eslint-config-next": "^15.1.6",
@@ -47,6 +48,7 @@
     "@kubb/plugin-oas": "^3.5.6",
     "@kubb/plugin-react-query": "^3.5.6",
     "@kubb/plugin-ts": "^3.5.6",
+    "@types/color": "^4.2.0",
     "dotenv": "^16.4.7"
   }
 }
