--- a/package.json
+++ b/package.json
@@ -36,17 +36,18 @@
     "postcss": "^8.5.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-markdown": "^9.0.3",
     "tailwind-merge": "^2.6.0",
     "tailwindcss": "^4.0.0",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.7.3"
   },
   "devDependencies": {
-    "@kubb/cli": "^3.5.6",
+    "@kubb/cli": "^3.5.7",
     "@kubb/core": "^3.5.6",
     "@kubb/plugin-client": "^3.5.6",
     "@kubb/plugin-oas": "^3.5.6",
-    "@kubb/plugin-react-query": "^3.5.6",
+    "@kubb/plugin-react-query": "^3.5.7",
     "@kubb/plugin-ts": "^3.5.6",
     "@types/color": "^4.2.0",
     "dotenv": "^16.4.7"
