--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ itsdangerous==2.2.0
 Jinja2==3.1.5
 jsonschema==4.23.0
 jsonschema-specifications==2024.10.1
+markdownify==0.14.1
 MarkupSafe==3.0.2
 marshmallow==3.26.0
 marshmallow-enum==1.5.1
