chore: adicionado libs para testes, lint, format

--- a/requirements.txt
+++ b/requirements.txt
@@ -6,12 +6,15 @@ blinker==1.9.0
 certifi==2024.12.14
 charset-normalizer==3.4.1
 click==8.1.8
+coverage==7.6.10
+exceptiongroup==1.2.2
 fandom-py==0.2.1
 Flask==3.0.3
 Flask-Cors==5.0.0
 flask-smorest==0.45.0
 idna==3.10
 importlib_resources==6.5.2
+iniconfig==2.0.0
 itsdangerous==2.2.0
 Jinja2==3.1.5
 jsonschema==4.23.0
@@ -22,13 +25,17 @@ marshmallow==3.26.0
 marshmallow-enum==1.5.1
 mistune==3.1.1
 packaging==24.2
+pluggy==1.5.0
+pytest==8.3.4
 pytz==2024.2
 PyYAML==6.0.2
 referencing==0.36.2
 requests==2.32.3
 rpds-py==0.22.3
+ruff==0.9.4
 six==1.17.0
 soupsieve==2.6
+tomli==2.2.1
 typing_extensions==4.12.2
 urllib3==2.3.0
 webargs==8.6.0
