--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "pregen": "wget http://localhost:5328/swagger.json -O api/swagger.json",
+    "pregen": "wget http://localhost:5328/api/swagger.json -O api/swagger.json",
     "gen": "kubb generate"
   },
   "dependencies": {
@@ -43,7 +43,7 @@
     "typescript": "^5.7.3"
   },
   "devDependencies": {
-    "@kubb/cli": "^3.5.7",
+    "@kubb/cli": "^3.6.1",
     "@kubb/core": "^3.5.6",
     "@kubb/plugin-client": "^3.5.6",
     "@kubb/plugin-oas": "^3.5.6",
