fix: add dependencies in requirements.txt

--- a/requirements.txt
+++ b/requirements.txt
@@ -3,11 +3,13 @@ apispec==6.8.1
 attrs==25.1.0
 beautifulsoup4==4.12.3
 blinker==1.9.0
+cachelib==0.13.0
 certifi==2024.12.14
 charset-normalizer==3.4.1
 click==8.1.8
 fandom-py==0.2.1
 Flask==3.0.3
+Flask-Caching==2.3.1
 Flask-Cors==5.0.0
 flask-smorest==0.45.0
 idna==3.10
@@ -29,6 +31,9 @@ requests==2.32.3
 rpds-py==0.22.3
 six==1.17.0
 soupsieve==2.6
+types-beautifulsoup4==4.12.0.20250204
+types-html5lib==1.1.11.20241018
+types-requests==2.32.0.20241016
 typing_extensions==4.12.2
 urllib3==2.3.0
 webargs==8.6.0
