--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-markdown": "^9.0.3",
+    "sass": "^1.85.1",
     "tailwind-merge": "^2.6.0",
     "tailwindcss": "^4.0.0",
     "tailwindcss-animate": "^1.0.7",
@@ -49,6 +50,7 @@
     "@kubb/plugin-oas": "^3.5.6",
     "@kubb/plugin-react-query": "^3.5.7",
     "@kubb/plugin-ts": "^3.5.6",
+    "@svgr/webpack": "^8.1.0",
     "@types/color": "^4.2.0",
     "dotenv": "^16.4.7"
   }
