--- a/requirements.txt
+++ b/requirements.txt
@@ -1,41 +1,9 @@
-aniso8601==10.0.0
-apispec==6.8.1
-attrs==25.1.0
-beautifulsoup4==4.12.3
-blinker==1.9.0
-cachelib==0.13.0
-certifi==2024.12.14
-charset-normalizer==3.4.1
-click==8.1.8
-fandom-py==0.2.1
-Flask==3.0.3
-Flask-Caching==2.3.1
-Flask-Cors==5.0.0
-flask-smorest==0.45.0
-idna==3.10
-importlib_resources==6.5.2
-itsdangerous==2.2.0
-Jinja2==3.1.5
-jsonschema==4.23.0
-jsonschema-specifications==2024.10.1
-markdownify==0.14.1
-MarkupSafe==3.0.2
-marshmallow==3.26.0
-marshmallow-enum==1.5.1
-mistune==3.1.1
-packaging==24.2
-pytz==2024.2
-PyYAML==6.0.2
-referencing==0.36.2
-requests==2.32.3
-rpds-py==0.22.3
-six==1.17.0
-soupsieve==2.6
-types-beautifulsoup4==4.12.0.20250204
-types-html5lib==1.1.11.20241018
-types-requests==2.32.0.20241016
-typing_extensions==4.12.2
-urllib3==2.3.0
-webargs==8.6.0
-Werkzeug==3.1.3
+Flask==3.1.0
+Flask_Caching==2.3.1
+flask_cors==5.0.1
+flask_smorest==0.45.0
+gotrue==2.11.4
+marshmallow==3.26.1
+marshmallow_sqlalchemy==1.4.1
 python-dotenv==1.0.1
+SQLAlchemy==2.0.39
