fix: python version

--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
     "$schema": "https://openapi.vercel.sh/vercel.json",
     "functions": {
         "api/__main__.py": {
-            "runtime": "python"
+            "runtime": "python@3.13.2"
         }
     }
 }
