--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
     "$schema": "https://openapi.vercel.sh/vercel.json",
     
-    "builds":[{"src": "api/index.py"}] 
+    "builds":[{"src": "api/index.py", "use": "@vercel/python"}] 
 }
