--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,7 @@
       }
     ],
     "paths": {
-      "@/*": ["./app/*"]
+      "@/*": ["./src/*"]
     }
   },
   "include": ["modules.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
