--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "pregen": "wget http://localhost:5000/api/swagger.json -O swagger.json",
+    "pregen": "wget http://localhost:5000/swagger.json -O swagger.json",
     "gen": "kubb generate"
   },
   "dependencies": {
@@ -16,7 +16,8 @@
     "@radix-ui/react-dialog": "^1.1.5",
     "@tailwindcss/postcss": "^4.0.0",
     "@tanstack/react-query": "^5.65.1",
-    "@types/node": "20.1.4",
+    "@types/lodash": "^4.17.16",
+    "@types/node": "^22.15.17",
     "@types/react": "^19.0.7",
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
@@ -28,6 +29,7 @@
     "concurrently": "^8.0.1",
     "eslint": "8.40.0",
     "eslint-config-next": "^15.1.6",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.473.0",
     "next": "^15.1.6",
     "next-themes": "^0.4.4",
