--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@radix-ui/react-accordion": "^1.2.2",
     "@radix-ui/react-dialog": "^1.1.5",
+    "@radix-ui/react-popover": "^1.1.13",
     "@tailwindcss/postcss": "^4.0.0",
     "@tanstack/react-query": "^5.65.1",
     "@types/lodash": "^4.17.16",
