--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
     "gen": "kubb generate"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.0.1",
     "@radix-ui/react-accordion": "^1.2.2",
     "@radix-ui/react-dialog": "^1.1.5",
+    "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-popover": "^1.1.13",
+    "@radix-ui/react-slot": "^1.2.3",
     "@tailwindcss/postcss": "^4.0.0",
     "@tanstack/react-query": "^5.65.1",
     "@types/lodash": "^4.17.16",
@@ -37,20 +40,23 @@
     "postcss": "^8.5.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.56.4",
     "react-markdown": "^9.0.3",
     "sass": "^1.85.1",
     "tailwind-merge": "^2.6.0",
     "tailwindcss": "^4.0.0",
     "tailwindcss-animate": "^1.0.7",
-    "typescript": "^5.7.3"
+    "typescript": "^5.7.3",
+    "zod": "^3.25.17"
   },
   "devDependencies": {
-    "@kubb/cli": "^3.6.1",
-    "@kubb/core": "^3.5.6",
-    "@kubb/plugin-client": "^3.5.6",
-    "@kubb/plugin-oas": "^3.5.6",
-    "@kubb/plugin-react-query": "^3.5.7",
-    "@kubb/plugin-ts": "^3.5.6",
+    "@kubb/cli": "^3.10.12",
+    "@kubb/core": "^3.10.12",
+    "@kubb/plugin-client": "^3.10.12",
+    "@kubb/plugin-oas": "^3.10.12",
+    "@kubb/plugin-react-query": "^3.10.12",
+    "@kubb/plugin-ts": "^3.10.12",
+    "@kubb/plugin-zod": "^3.10.12",
     "@svgr/webpack": "^8.1.0",
     "@types/color": "^4.2.0",
     "dotenv": "^16.4.7",
