--- a/package.json
+++ b/package.json
@@ -37,13 +37,14 @@
     "lodash": "^4.17.21",
     "lucide-react": "^0.473.0",
     "next": "^15.1.6",
-    "next-themes": "^0.4.4",
+    "next-themes": "^0.4.6",
     "postcss": "^8.5.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.4",
     "react-markdown": "^9.0.3",
     "sass": "^1.85.1",
+    "sonner": "^2.0.3",
     "tailwind-merge": "^2.6.0",
     "tailwindcss": "^4.0.0",
     "tailwindcss-animate": "^1.0.7",
